fixed stretched image

--- a/front_end/app/styles/landing_page.scss
+++ b/front_end/app/styles/landing_page.scss
@@ -125,7 +125,7 @@
 }
 
 #landing-page-volunteer-image {
-  width: 100%;
+
 }
 
 #landing-page-contact {
